--- a/website/template/register.html
+++ b/website/template/register.html
@@ -9,11 +9,55 @@
 	<!-- Font-->
 	<link rel="stylesheet" type="text/css" href="{% static 'register/css/nunito-font.css' %}">
 	<!-- Main Style Css -->
-    <link rel="stylesheet" href="{% static 'register/css/style.css' %}"/>
+	
+	<!-- Lo del header -->
+	<!-- Our CSS stylesheet file -->
+	<link rel="stylesheet" href="{% static 'assets/css/styles.css' %}" />
+
+	<!-- Font Awesome Stylesheet -->
+	<link rel="stylesheet" href="{% static 'assets/font-awesome/css/font-awesome.css' %}" />
+	<!-- Estilo del registro -->
+	<link rel="stylesheet" href="{% static 'register/css/style.css' %}"/>
+    
+	
+
 </head>
 <body class="form-v9">
+	<header>
+		<nav id="colorNav">
+			<ul>
+				<li class="green">
+					<a href="#" class="icon-home"></a>
+					<ul>
+						<li><a href="#">Ir al inicio</a></li>
+					</ul>
+				</li>
+				<li class="blue">
+					<a href="#" class="icon-user"></a>
+					<ul>
+						<li><a href="#">Crear Usuario</a></li>
+						<li><a href="#">Eliminar Usuario</a></li>
+					</ul>
+				</li>
+				<li class="yellow">
+					<a href="#" class="icon-book"></a>
+					<ul>
+						<li><a href="#">Ver asistencia</a></li>
+					</ul>
+				</li>
+				
+				<li class="red">
+					<a href="#" class="icon-cogs"></a>
+					<ul>
+						<li><a href="#">Cerrar Sesion</a></li>
+						<li><a href="#">Configuracion de la cuenta</a></li>
+					</ul>
+				</li>
+			</ul>
+		</nav>
+	</header>
 	<div class="page-content">
-		<div class="form-v9-content"> <!-- style="background-image: url('images/a.webp')" -->
+		<div class="form-v9-content">
 			<form class="form-detail" action="#" method="post">
 				{% csrf_token %}
 				<h2>Registro de Usuarios</h2>
