Login con direccionamiento al index y al registro

--- a/website/template/login.html
+++ b/website/template/login.html
@@ -28,17 +28,17 @@
 		<div class="container-login100">
 			<div class="wrap-login100">
 				<div class="login100-pic js-tilt" data-tilt>
-					{% load static %}
 					<img src="{% static 'login/images/sena.png' %}" alt="Imagen logo SENA">
 				</div>
 
-				<form class="login100-form validate-form">
+				<form method = "POST" class="login100-form validate-form">
+					{% csrf_token %}
 					<span class="login100-form-title">
 						Inicio de Sesion
 					</span>
 
 					<div class="wrap-input100 validate-input" data-validate = "Escriba un usuario valido">
-						<input class="input100" type="text" name="user" placeholder="Usuario">
+						<input class="input100" type="text" id = 'user' name="user" placeholder="Usuario">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-user" aria-hidden="true"></i>
@@ -46,7 +46,7 @@
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate = "Escriba una contraseña valida">
-						<input class="input100" type="password" name="pass" placeholder="Contraseña">
+						<input class="input100" type="password" id = 'password' name="pass" placeholder="Contraseña">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
@@ -54,14 +54,15 @@
 					</div>
 					
 					<div class="container-login100-form-btn">
-						<button class="login100-form-btn">
-							Iniciar
+						<button type= 'submit' class="login100-form-btn">
+							Ingresar
 						</button>
 					</div>
 
 					
 
 					<div class="text-center p-t-136"></div>
+					
 				</form>
 			</div>
 		</div>
@@ -86,6 +87,8 @@
 	</script>
 <!--===============================================================================================-->
 	<script src="{% static 'login/js/main.js' %}"></script>
+	<!-- Sweet Alert -->
+	<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </body>
 </html>
