--- a/website/template/login.html
+++ b/website/template/login.html
@@ -54,7 +54,7 @@
 					</div>
 					
 					<div class="container-login100-form-btn">
-						<button type= 'submit' class="login100-form-btn">
+						<button type= 'submit' class="login100-form-btn" onclick="validate()">
 							Ingresar
 						</button>
 					</div>
@@ -89,6 +89,15 @@
 	<script src="{% static 'login/js/main.js' %}"></script>
 	<!-- Sweet Alert -->
 	<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
+	{%for m in messages%}
+		<script>
+			Swal.fire({
+        icon: 'error',
+        title: '😢 Algo esta incorrecto! 😢',
+        text: '{{m}}'
+    })
+		</script>
+	{% endfor %}
+	
 </body>
 </html>
