--- a/website/template/login.html
+++ b/website/template/login.html
@@ -54,7 +54,7 @@
 					</div>
 					
 					<div class="container-login100-form-btn">
-						<button type= 'submit' class="login100-form-btn" onclick="validate()">
+						<button type= 'submit' class="login100-form-btn">
 							Ingresar
 						</button>
 					</div>
@@ -92,10 +92,10 @@
 	{%for m in messages%}
 		<script>
 			Swal.fire({
-        icon: 'error',
-        title: '😢 Algo esta incorrecto! 😢',
-        text: '{{m}}'
-    })
+				icon: 'error',
+				title: '😢 Algo esta incorrecto! 😢',
+				text: '{{m}}'
+			})
 		</script>
 	{% endfor %}
 	
