--- a/website/template/register.html
+++ b/website/template/register.html
@@ -3,6 +3,8 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<!-- Poner icono nuevo-->
+		<link rel="icon" type="image/png" href="{% static 'login/images/icons/favicon.ico' %}"/>
 		<title>Registro Usuarios</title>
 		<!-- Mobile Specific Metas -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -18,8 +20,10 @@
 		<link rel="stylesheet" href="{% static 'assets/font-awesome/css/font-awesome.css' %}" />
 		<!-- Estilo del registro -->
 		<link rel="stylesheet" href="{% static 'register/css/style.css' %}"/>
-		
-		
+		<!-- Sweet Alert -->
+		<link rel="stylesheet" type="text/css" href="{% static 'sweetAlert/sweetalert2.min.css' %}">
+		<!-- Validar Pw -->
+		<script src="{%static 'register/js/validate.js'%}"></script>
 
 	</head>
 	<body class="form-v9">
@@ -75,7 +79,7 @@
 							<input type="password" name="password" id="password" class="input-text" placeholder="Contraseña" required>
 						</div>
 						<div class="form-row">
-							<input type="password" name="comfirm" id="comfirm" class="input-text" placeholder="Confirmar contraseña" required>
+							<input type="password" name="confirm" id="confirm" class="input-text" placeholder="Confirmar contraseña" required>
 						</div>
 					</div>
 					<div class="form-row-last">
@@ -85,15 +89,28 @@
 			</div>
 		</div>
 		<!-- Sweet Alert -->
-		<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-		{%for m in messages%}
-			<script>
-				Swal.fire({
-					icon: 'success',
-					title: '😎 Registrado! 😎',
-					text: '{{m}}'
-				})
-			</script>
-		{% endfor %} 
+		<script src="{%static 'sweetAlert/sweetalert2.all.min.js'%}"></script>
+		{% if messages %}
+			{%for m in messages%}
+				{% if m.tags == 'success' %}
+					<script>
+						Swal.fire({
+							icon: 'success',
+							title: '😎 Registrado! 😎',
+							text: '{{m}}'
+						})
+					</script>
+				{% endif %}
+				{% if m.tags == 'error' %}
+					<script>
+						Swal.fire({
+							icon: 'error',
+							title: '😢 Invalido! 😢',
+							text: '{{m}}'
+						})
+					</script>
+				{% endif %}
+			{% endfor %}
+		{% endif %}
 	</body>
 </html>
