--- a/website/template/index.html
+++ b/website/template/index.html
@@ -11,11 +11,14 @@
 		<!-- Font Awesome Stylesheet -->
 		<link rel="stylesheet" href="{% static 'assets/font-awesome/css/font-awesome.css' %}" />
 
+		<!-- Our CSS stylesheet file -->
+        <link rel="stylesheet" href="{% static 'asistencia/css/estilos.css'%}" />
+
     </head>
     
     <body>
-
-    	<nav id="colorNav">
+		<header>
+    	<nav id="colorNav" style="font-family: 'ABeeZee'">
 			<ul>
 				<li class="green">
 					<a class="icon-home"></a>
@@ -46,7 +49,7 @@
 				</li>
 			</ul>
 		</nav>
-
+	</header>
         
 
     
