--- a/website/template/asistencia.html
+++ b/website/template/asistencia.html
@@ -28,9 +28,9 @@
     <body>
 
 		<header>
-
-			<nav id="colorNav">
-				<ul>
+		<div class="navigation" id="navigation">
+				<nav id="colorNav">
+					<ul>
 					<li class="green">
 						<a class="icon-home"></a>
 						<ul>
@@ -41,7 +41,6 @@
 						<a class="icon-user"></a>
 						<ul>
 							<li><a href="/registro">Registrar Usuario</a></li>
-							<li><a href="#">Eliminar Usuario</a></li>
 						</ul>
 					</li>
 					<li class="yellow">
@@ -58,9 +57,10 @@
 							<li><a href="#">Configuracion de la cuenta</a></li>
 						</ul>
 					</li>
-				</ul>
+					</ul>
 			</nav>
 
+		</div>
 		</header>
 
 		<div class="selectFicha">
