--- a/website/static/register/css/style.css
+++ b/website/static/register/css/style.css
@@ -1,9 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=ABeeZee&display=swap');
 
 *{
-  font-family: 'ABeeZee', sans-serif;
-  font-size: 13px;
+	padding: 0;
+	margin: 0;
+  	font-family: 'ABeeZee', sans-serif;
+  	font-size: 13px;
 }
+
+#navigation{
+	background:#16222A;
+	display: flex;
+	justify-content: center;
+	padding: 5px;
+  }
 
 .page-content {
 	width: 100%;
@@ -11,7 +20,6 @@
 	background: -webkit-linear-gradient(to right, #3A6073, #16222A);  /* Chrome 10-25, Safari 5.1-6 */
 	background: linear-gradient(to right, #3A6073, #16222A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 	display: flex;
-	display: -webkit-flex;
 	justify-content: center;
 	-o-justify-content: center;
 	-ms-justify-content: center;
@@ -31,7 +39,7 @@
 	-ms-border-radius: 15px;
 	-moz-border-radius: 15px;
 	-webkit-border-radius: 15px;
-	margin: 50px 0;
+	margin: 100px 0;
 	color: #fff;
 	font-weight: 700;
 	font-size: 16px;
