--- a/website/template/index.html
+++ b/website/template/index.html
@@ -12,46 +12,62 @@
 		<link rel="stylesheet" href="{% static 'assets/font-awesome/css/font-awesome.css' %}" />
 
 		<!-- Our CSS stylesheet file -->
-        <link rel="stylesheet" href="{% static 'asistencia/css/estilos.css'%}" />
+        <link rel="stylesheet" href="{% static 'index/css/estilos.css'%}" />
 
     </head>
     
     <body>
 		<header>
-    	<nav id="colorNav" style="font-family: 'ABeeZee'">
-			<ul>
-				<li class="green">
-					<a class="icon-home"></a>
-					<ul>
-						<li><a href="/index">Ir al inicio</a></li>
-					</ul>
-				</li>
-				<li class="blue">
-					<a class="icon-user"></a>
-					<ul>
-						<li><a href="/registro">Registrar Usuario</a></li>
-						<li><a href="#">Eliminar Usuario</a></li>
-					</ul>
-				</li>
-				<li class="yellow">
-					<a class="icon-book"></a>
-					<ul>
-						<li><a href="/asistencia">Ver asistencia</a></li>
-					</ul>
-				</li>
-				
-				<li class="red">	
-					<a class="icon-cogs"></a>
-					<ul>
-						<li><a href="#">Cerrar Sesion</a></li>
-						<li><a href="#">Configuracion de la cuenta</a></li>
-					</ul>
-				</li>
-			</ul>
-		</nav>
-	</header>
-        
+			<div class="navigation-menu" id="navigation-menu">
+					<nav id="colorNav">
+						<ul>
+						<li class="green">
+							<a class="icon-home"></a>
+							<ul>
+								<li><a href="/index">Ir al inicio</a></li>
+							</ul>
+						</li>
+						<li class="blue">
+							<a class="icon-user"></a>
+							<ul>
+								<li><a href="/registro">Registrar Usuario</a></li>
+							</ul>
+						</li>
+						<li class="yellow">
+							<a class="icon-book"></a>
+							<ul>
+								<li><a href="/asistencia">Ver asistencia</a></li>
+							</ul>
+						</li>
+						
+						<li class="red">	
+							<a class="icon-cogs"></a>
+							<ul>
+								<li><a href="#">Cerrar Sesion</a></li>
+								<li><a href="#">Configuracion de la cuenta</a></li>
+							</ul>
+						</li>
+						</ul>
+				</nav>
+	
+			</div>
+			</header>
+			
+			<div class="img" id="img" style="text-align: center">
+			<img src="{% static 'index/images/att.png'%}" >
+			</div>
 
-    
+
+			<div class="content">
+				<p>Attendance</p>
+			</div>
+
     </body>
+
+	<footer>
+		<div class="wave" style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" 
+		style="height: 100%; width: 100%;"><path d="M0.00,49.98 C150.00,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" 
+		style="stroke: none; fill: #16222A;"></path></svg></div>
+
+	</footer>
 </html>
