Ajax2 javascript and asistencia table without static URL

--- a/website/template/asistencia.html
+++ b/website/template/asistencia.html
@@ -23,6 +23,10 @@
 		<!-- Importando datatable css -->
         <link rel="stylesheet" type="text/css" href="{% static 'asistencia/vendor/datatables/datatables.min.css' %}">
 
+		<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">-->
+
+		
+
     </head>
     
     <body>
@@ -76,7 +80,24 @@
 		  <button type="submit">Enviar</button>
 		</div>
 
-		
+		<div class="container">
+			<div class="section"></div>
+			<button class="btn" id="boton">Json</button>
+
+			<table>
+				<thead>
+					<tr>
+						<th>Id</th>
+						<th>Estudiante</th>
+					</tr>
+				</thead>
+				<tbody id="res">
+
+				</tbody>
+			</table>
+
+		</div>
+
     </body>
 
 	<!-- Importando select2 js  -->
@@ -87,6 +108,9 @@
 
 	<!-- Importando main de javascript -->  
 	<script src="{%static 'asistencia/js/main.js'%}"></script>
+
+	<!-- Importando main de javascript -->  
+	<script src="{%static 'asistencia/js/ajax2.js'%}"></script>
 
 </html>
 
