Desplegar lista de asistencia en html

--- a/website/template/asistencia.html
+++ b/website/template/asistencia.html
@@ -79,24 +79,26 @@
 		  <input type="date" name="si" id="si">
 		  <button type="submit">Enviar</button>
 		</div>
-
+		{% include "asistenciaFicha01.html" %}
 		<div class="container">
-			<div class="section"></div>
+			<!-- <div class="section"></div>
 			<button class="btn" id="boton">Json</button>
 
-			<table>
-				<thead>
-					<tr>
-						<th>Id</th>
-						<th>Estudiante</th>
-					</tr>
-				</thead>
-				<tbody id="res">
+				<table>
+					<thead>
+						<tr>
+							<th>Id</th>
+							<th>Estudiante</th>
+						</tr>
+					</thead>
+					<tbody id="res">
 
-				</tbody>
-			</table>
-
+					</tbody>
+				</table> -->
+			
+			
 		</div>
+		
 
     </body>
 
