--- a/website/template/asistencia.html
+++ b/website/template/asistencia.html
@@ -23,9 +23,11 @@
 		<!-- Importando datatable css -->
         <link rel="stylesheet" type="text/css" href="{% static 'asistencia/vendor/datatables/datatables.min.css' %}">
 
-		<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">-->
+		<!-- Importando datatable css -->
+        <link rel="stylesheet" type="text/css" href="{% static 'asistencia/vendor/ohsnap/ohsnap.css' %}">
 
-		
+		<!-- Importando datatable css -->
+        <link rel="stylesheet" type="text/css" href="{% static 'asistencia/css/tables.css' %}">
 
     </head>
     
@@ -67,38 +69,24 @@
 		</div>
 		</header>
 
-		<div class="selectFicha">
-		<select class="js-example-basic-single" style="width: 50%" name="state">
-			<option value="" class="optionF">Seleccione una ficha</option>
-			<!-- Iteramos las fichas -->
-			{% for ficha in fichas %}
-			<!-- Obtenemos cada ficha -->
-			<option value="{{ficha}}" class="optionF">{{ficha}}</option>
-			{% endfor %}
-		  </select>
-		  <input type="date" name="si" id="si">
-		  <button type="submit">Enviar</button>
-		</div>
-		{% include "asistenciaFicha01.html" %}
-		<div class="container">
-			<!-- <div class="section"></div>
-			<button class="btn" id="boton">Json</button>
 
-				<table>
-					<thead>
-						<tr>
-							<th>Id</th>
-							<th>Estudiante</th>
-						</tr>
-					</thead>
-					<tbody id="res">
+		<form method="post" id="asistencia-form">
+			{% csrf_token %}
+			<div class="selectFicha">
+			<select class="js-example-basic-single" style="width: 50%" name="state" id="state">
+				<option value="" class="optionF" id="optionD">Seleccione una ficha</option>
+					<!-- Iteramos las fichas -->
+					{% for ficha in fichas %}
+					<!-- Obtenemos cada ficha -->
+				<option value="{{ficha}}" class="optionF">{{ficha}}</option>
+					{% endfor %}
+		  	</select>
+		  		<input type="date" name="date" id="date">
+		  		<button type="submit" onclick="validate(event)">Enviar</button>
+			</div>
+		</form>	
 
-					</tbody>
-				</table> -->
-			
-			
-		</div>
-		
+		{% include "asistenciaFicha.html" %}
 
     </body>
 
@@ -111,12 +99,10 @@
 	<!-- Importando main de javascript -->  
 	<script src="{%static 'asistencia/js/main.js'%}"></script>
 
-	<!-- Importando main de javascript -->  
-	<script src="{%static 'asistencia/js/ajax2.js'%}"></script>
+	<!-- Importando ohsnap -->  
+	<script src="{%static 'asistencia/vendor/ohsnap/ohsnap.js'%}"></script>
 
 </html>
-
-
 
 <script> 
 	$(document).ready(function() {
