css body asistencia

--- a/website/template/asistencia.html
+++ b/website/template/asistencia.html
@@ -81,13 +81,6 @@
 		  		<button type="submit" onclick="validate(event)">Enviar</button>
 			</div>
 		</for>
-	
-
-		<div w3-include-html="asistenciaFicha01.html"></div> 
-
-		<script>
-			w3IncludeHTML();
-		</script>
 
     </body>
 
@@ -105,6 +98,7 @@
 
 </html>
 
+<!-- Script para aplicar select2 a nuestro select-option -->
 <script> 
 	$(document).ready(function() {
 	    $('.select2').select2({
