--- a/website/template/asistencia.html
+++ b/website/template/asistencia.html
@@ -66,7 +66,7 @@
 		</div>
 		</header>
 
-		<form method="post" id="asistencia-form">
+		<form method="POST" id="asistencia-form">
 			{% csrf_token %}
 			<div class="selectFicha">
 			<select class="select2" style="width: 50%" name="state" id="state">
@@ -77,10 +77,12 @@
 				<option value="{{ficha}}" class="optionF">{{ficha}}</option>
 					{% endfor %}
 		  	</select>
+			  	<input type="hidden" name="ficha" id="ficha">
 		  		<input type="date" name="date" id="date">
 		  		<button type="submit" onclick="validate(event)">Enviar</button>
 			</div>
-		</for>
+
+		</form>
 
     </body>
 
