--- a/website/template/asistenciaFicha.html
+++ b/website/template/asistenciaFicha.html
@@ -1,8 +1,9 @@
 
             {% load static %}
             <html>
-                <head><title>Asisteencia</title>
+                <head><title>Asistencia</title>
                     <link rel="stylesheet" type="text/css" href="{% static 'asistencia/css/tables.css'%}"/>
+                    <link rel="stylesheet" type="text/css" href="{% static 'asistencia/css/button.css'%}"/>
                 </head>
                 <body>
                     <table border="1" class="dataframe">
@@ -22,7 +23,7 @@
     <tr>
       <th>1</th>
       <td>LucasArboledaBedoya</td>
-      <td>Presente</td>
+      <td>No vino</td>
     </tr>
     <tr>
       <th>2</th>
@@ -32,47 +33,47 @@
     <tr>
       <th>3</th>
       <td>JuanPabloRojasArismendy</td>
-      <td>Presente</td>
+      <td>No vino</td>
     </tr>
     <tr>
       <th>4</th>
       <td>SimonLopezPelaez</td>
-      <td>Presente</td>
+      <td>No vino</td>
     </tr>
     <tr>
       <th>5</th>
       <td>MiguelAngelCastillaBallestas</td>
-      <td>Presente</td>
+      <td>No vino</td>
     </tr>
     <tr>
       <th>6</th>
       <td>JuanDavidRiveraCasallas</td>
-      <td>Presente</td>
+      <td>No vino</td>
     </tr>
     <tr>
       <th>7</th>
       <td>EmmanuelMunozZapata</td>
-      <td>Presente</td>
+      <td>No vino</td>
     </tr>
     <tr>
       <th>8</th>
       <td>JuanDavidRuizAlzate</td>
-      <td>Presente</td>
+      <td>No vino</td>
     </tr>
     <tr>
       <th>9</th>
       <td>OrlandoRobertoVilladiegoOtero</td>
-      <td>Presente</td>
+      <td>No vino</td>
     </tr>
     <tr>
       <th>10</th>
       <td>LuisaRamirez</td>
-      <td>Presente</td>
+      <td>No vino</td>
     </tr>
     <tr>
       <th>11</th>
       <td>JessicaArcila</td>
-      <td>Presente</td>
+      <td>No vino</td>
     </tr>
     <tr>
       <th>12</th>
@@ -82,7 +83,7 @@
     <tr>
       <th>13</th>
       <td>JoselynArangoBedoya</td>
-      <td>No vino</td>
+      <td>Presente</td>
     </tr>
     <tr>
       <th>14</th>
@@ -92,7 +93,7 @@
     <tr>
       <th>15</th>
       <td>DannaMolinaZapata</td>
-      <td>No vino</td>
+      <td>Presente</td>
     </tr>
     <tr>
       <th>16</th>
@@ -122,7 +123,7 @@
     <tr>
       <th>21</th>
       <td>GeraldinPalacioMunos</td>
-      <td>No vino</td>
+      <td>Presente</td>
     </tr>
     <tr>
       <th>22</th>
@@ -172,7 +173,7 @@
     <tr>
       <th>31</th>
       <td>SofiaVeraMartina</td>
-      <td>No vino</td>
+      <td>Presente</td>
     </tr>
     <tr>
       <th>32</th>
@@ -226,7 +227,10 @@
     </tr>
   </tbody>
 </table>
-                    
+                <footer>
+                    <a href="{% static 'asistencia/excel/asistenciaFicha.xlsx'%}" download="asistencia.xlsx">Descargar Asistencia</a>
+                </footer>
                 </body>
+                
                 </html>
             
