--- a/website/static/asistencia/css/tables.css
+++ b/website/static/asistencia/css/tables.css
@@ -24,6 +24,7 @@ caption {
 }
 
 table {
+    padding: 20px 0;
     border-collapse: collapse;
     border: 2px solid rgb(200, 200, 200);
     letter-spacing: 1px;
