Sesion hablitada - Logout funcionando

--- a/website/template/asistenciaFicha.html
+++ b/website/template/asistenciaFicha.html
@@ -22,7 +22,7 @@
     <tr>
       <th>1</th>
       <td>LucasArboledaBedoya</td>
-      <td>Presente</td>
+      <td>No vino</td>
     </tr>
     <tr>
       <th>2</th>
@@ -64,28 +64,170 @@
       <td>OrlandoRobertoVilladiegoOtero</td>
       <td>No vino</td>
     </tr>
-    
+    <tr>
+      <th>10</th>
+      <td>LuisaRamirez</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>11</th>
+      <td>JessicaArcila</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>12</th>
+      <td>ManuelaSotoMarin</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>13</th>
+      <td>JoselynArangoBedoya</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>14</th>
+      <td>ManuelNorenaGuevera</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>15</th>
+      <td>DannaMolinaZapata</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>16</th>
+      <td>YuriJohanaVinascoFonseca</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>17</th>
+      <td>LauraAndreaTrujilloRestrepo</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>18</th>
+      <td>JulianaRioMartinez</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>19</th>
+      <td>ValentinaRamirezCuesta</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>20</th>
+      <td>HaroldValenciaGonzales</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>21</th>
+      <td>GeraldinPalacioMunos</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>22</th>
+      <td>MichellyHurtadoJimenez</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>23</th>
+      <td>DamaraGiraldoBolivar</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>24</th>
+      <td>SaraAcevedoMarin</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>25</th>
+      <td>YuranyRojasPulgarin</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>26</th>
+      <td>JulianaQuinteroArboleda</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>27</th>
+      <td>DuvanEsneiderDiazMontoya</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>28</th>
+      <td>YeilyFunesOsorio</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>29</th>
+      <td>CrisLauraPadilla</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>30</th>
+      <td>MelanyMorales</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>31</th>
+      <td>SofiaVeraMartina</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>32</th>
+      <td>MarianaValenciaZapata</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>33</th>
+      <td>JuanCamiloVasqeuz</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>34</th>
+      <td>SebastianMejiaVasquez</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>35</th>
+      <td>SantiagoMejiaAcevedo</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>36</th>
+      <td>EadySantiagoLondono</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>37</th>
+      <td>SalomeSisquiarcoRios</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>38</th>
+      <td>JhonatanMontanaSolano</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>39</th>
+      <td>SantiagoParraOsorio</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>40</th>
+      <td>YenniferJimenezAguila</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>41</th>
+      <td>SamuelYepesOsorio</td>
+      <td>No vino</td>
+    </tr>
   </tbody>
 </table>
                 <footer>
-                <div class="container-fluid">
-	<div class="row">
-		<div id="ms-container">
-			<label for="ms-download">
-				<div class="ms-content">
-					<div class="ms-content-inside">
-						<input type="checkbox" id="ms-download" />
-                        <a href="{% static 'asistencia/excel/asistenciaFicha.xlsx'%}" download="asistencia.xlsx">Descargar Asistencia</a>
-						<div class="ms-line-down-container">
-							<div class="ms-line-down"></div>
-						</div>
-						<div class="ms-line-point"></div>
-					</div>
-				</div>
-			</label>
-		</div>
-	</div>
-</div>
+                    <a href="{% static 'asistencia/excel/asistenciaFicha.xlsx'%}" download="asistencia.xlsx">Descargar Asistencia</a>
                 </footer>
                 </body>
                 
