--- a/website/static/index/css/estilos.css
+++ b/website/static/index/css/estilos.css
@@ -6,6 +6,23 @@
   padding:0;
 }
 
+.a-div{
+  margin: 100px 0;
+  text-align: center;
+}
+
+#button { 
+  text-align: center;
+  width: 100px;
+  background-color: #4ca8af;
+  border: none;
+  color: white;
+  margin: 100px 0;
+  padding: 10px 20px;
+  text-decoration: none;
+  font-size: 16px;
+}
+
 header{
   font-size: 13px;
 }
