--- a/website/template/asistencia.html
+++ b/website/template/asistencia.html
@@ -37,7 +37,7 @@
 					<li class="green">
 						<a class="icon-home"></a>
 						<ul>
-							<li><a href="/index">Ir al inicio</a></li>
+							<li><a href="/">Ir al inicio</a></li>
 						</ul>
 					</li>
 					<li class="blue">
@@ -56,7 +56,7 @@
 					<li class="red">	
 						<a class="icon-cogs"></a>
 						<ul>
-							<li><a href="/asistenciaFicha01">Cerrar Sesion</a></li>
+							<li><a href="/logout">Cerrar Sesion</a></li>
 							<li><a href="/configuracion">Configuracion de la cuenta</a></li>
 						</ul>
 					</li>
