--- a/website/template/register.html
+++ b/website/template/register.html
@@ -8,14 +8,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<!-- Poner icono nuevo-->
 		<link rel="icon" type="image/png" href="{% static 'login/images/icons/favicon.ico' %}"/>
-		<!-- Font-->
-		<link rel="stylesheet" type="text/css" href="{% static 'register/css/nunito-font.css' %}">
 		<!-- Main Style Css -->
 		
 		<!-- Lo del header -->
 		<!-- Our CSS stylesheet file -->
 		<link rel="stylesheet" href="{% static 'assets/css/styles.css' %}" />
-
 		<!-- Font Awesome Stylesheet -->
 		<link rel="stylesheet" href="{% static 'assets/font-awesome/css/font-awesome.css' %}" />
 		<!-- Estilo del registro -->
@@ -24,6 +21,7 @@
 		<link rel="stylesheet" type="text/css" href="{% static 'sweetAlert/sweetalert2.min.css' %}">
 
 	</head>
+	
 	<body class="form-v9">
 		<header>
 			<div class="navigation" id="navigation">
@@ -32,7 +30,7 @@
 						<li class="green">
 							<a class="icon-home"></a>
 							<ul>
-								<li><a href="/index">Ir al inicio</a></li>
+								<li><a href="/">Ir al inicio</a></li>
 							</ul>
 						</li>
 						<li class="blue">
@@ -51,7 +49,7 @@
 						<li class="red">	
 							<a class="icon-cogs"></a>
 							<ul>
-								<li><a href="#">Cerrar Sesion</a></li>
+								<li><a href="/logout">Cerrar Sesion</a></li>
 								<li><a href="/configuracion">Configuracion de la cuenta</a></li>
 							</ul>
 						</li>
@@ -60,11 +58,14 @@
 	
 			</div>
 			</header>
+
 		<div class="page-content">
 			<div class="form-v9-content">
 				<form class="form-detail" action="#" method="post">
 					{% csrf_token %}
+
 					<h2>Registro de Usuarios</h2>
+
 					<div class="form-row-total">
 						<div class="form-row">
 							<!-- EDITADO, CAMBIE EL NAME E ID POR USER, tenia era name -->
@@ -74,6 +75,7 @@
 							<input type="email" name="email" id="email" class="input-text" placeholder="Correo Electronico" required pattern="[^@]+@[^@]+.[a-zA-Z]{2,6}">
 						</div>
 					</div>
+
 					<div class="form-row-total">
 						<div class="form-row">
 							<input type="password" name="password" id="password" class="input-text" placeholder="Contraseña" required>
@@ -82,6 +84,7 @@
 							<input type="password" name="confirm" id="confirm" class="input-text" placeholder="Confirmar contraseña" required>
 						</div>
 					</div>
+
 					<div class="form-row-last">
 						<input type="submit" name="register" class="register" value="Registrar Usuario">
 					</div>
