Llamando id desde la base de datos

--- a/website/template/configuracion.html
+++ b/website/template/configuracion.html
@@ -66,10 +66,10 @@
 
 						<div class="form-row-total">
 							<div class="form-row">
-								<input type="text" id="idUser" name="idUser" class="input-text" placeholder="Id" required>
+								<input type="text" id="txtUser" name="txtUser" class="input-text" placeholder="Usuario" required>
 							</div>
 							<div class="form-row">
-								<input type="text" id="txtUser" name="txtUser" class="input-text" placeholder="Usuario" required>
+								<input type="email" id="txtEmail" name="txtEmail" class="input-text" placeholder="Correo" required>
 							</div>
 						</div>
 
@@ -78,7 +78,7 @@
 								<input type="password" id="txtPass" name="txtPass" class="input-text" placeholder="Contraseña" required>
 							</div>
 							<div class="form-row">
-								<input type="email" id="txtEmail" name="txtEmail" class="input-text" placeholder="Correo" required>
+								<input type="password" name="confirmPass" id="confirmPass" class="input-text" placeholder="Confirmar contraseña" required>
 							</div>
 						</div>
 
