agregando css a la pagina web de asistencia

--- a/website/template/logearse.html
+++ b/website/template/logearse.html
@@ -8,19 +8,16 @@
         <!-- Our CSS stylesheet file -->
         <link rel="stylesheet" href="{% static 'assets/css/styles.css'%}" />
 
-		<!-- Font Awesome Stylesheet -->
-		<link rel="stylesheet" href="{% static 'assets/font-awesome/css/font-awesome.css' %}" />
-
 		<!-- Our CSS stylesheet file -->
         <link rel="stylesheet" href="{% static 'index/css/estilos.css'%}" />
+		<link rel="stylesheet" href="{% static 'assets/font-awesome/css/font-awesome.css' %}"/>
+        <link rel="stylesheet" type="text/css" href="{% static 'login/fonts/font-awesome-4.7.0/css/font-awesome.min.css' %}">
 
     </head>
     
     <body>
 		<header>
 			<div class="navigation-menu" id="navigation-menu">
-					<nav id="colorNav">
-				    </nav>
 			</div>
 		</header>
 			
@@ -34,7 +31,7 @@
 		</div>
 
         <div class="a-div">
-            <a href="/accounts/login" id="button" >Iniciar sesion</a>
+            <a href="/accounts/login" id="button">Iniciar sesion</a>
         </div>
 
     </body>
