--- a/website/static/asistencia/css/tables.css
+++ b/website/static/asistencia/css/tables.css
@@ -1,3 +1,9 @@
+*{
+    font-family: 'ABeeZee', sans-serif;
+    margin:0;
+    padding:0;
+}
+
 body{
     text-align: center;
 	background: #16222A;  /* fallback for old browsers */
@@ -6,7 +12,7 @@ body{
 }
 
 table{
-    margin: 0 auto;
+    margin: auto;
 }
 
 thead {
@@ -41,3 +47,8 @@ th {
 td {
     text-align: center;
 }
+
+.a-div{
+    margin: 50px 0;
+    text-align: center;
+  }
