--- a/website/template/configuracion.html
+++ b/website/template/configuracion.html
@@ -62,7 +62,7 @@
 					<form class="form-detail" action="#" method="POST">
 						{% csrf_token %}
 
-						<h2>Editar Cuenta</h2>
+						<h2>Editando Cuenta de {{usuario}}</h2>
 
 						<div class="form-row-total">
 							<div class="form-row">
